Thrusday-Lab-Class/Experiment-9/ab-testing-models/k8s/deployment_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-model-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris
      version: a
  template:
    metadata:
      labels:
        app: iris
        version: a
    spec:
      containers:
        - name: iris
          image: model-a:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
