Thrusday-Lab-Class/Experiment-9/ab-testing-models/k8s/deployment_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-model-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris
      version: b
  template:
    metadata:
      labels:
        app: iris
        version: b
    spec:
      containers:
        - name: iris
          image: model-b:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
