Thrusday-Lab-Class/Experiment-9/ab-testing-models/k8s/service_a.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-a-service
spec:
  selector:
    app: iris
    version: a
  ports:
    - port: 80
      targetPort: 9000
