Thrusday-Lab-Class/Experiment-9/ab-testing-models/k8s/service_b.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-b-service
spec:
  selector:
    app: iris
    version: b
  ports:
    - port: 80
      targetPort: 9000
