Thrusday-Lab-Class/Experiment-9/ab-testing-models/k8s/ingress_canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50" # split traffic
spec:
  rules:
    - host: iris.local
      http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: iris-b-service
                port:
                  number: 80
